--- a/workflows/ouray_hiz.ipynb
+++ b/workflows/ouray_hiz.ipynb
@@ -5,43 +5,39 @@
    "id": "ec583c1c-12ee-4fbb-951e-f0475ae51eac",
    "metadata": {},
    "source": [
-    "## Final - Part 2: Raster clipping and analysis within polygon boundaries\n",
+    "# Ouray Defensible Space Analysis\n",
     "\n",
-    "In Part 2 of this project, I use the raster we created from our point cloud using the `lidR` and `terra` packages in **R** in Part 1. You should have a raster called `example_raster_hmax` saved to your working directory. With this raster, we can retrieve information about the vegetation surrounding a home for the purpose of assessing wildfire risk. \n",
+    "In this notebook, we analyze fuel distributions within the defensible space of every building in Ouray County.\n",
     "\n",
-    "Install the necessary packages by entering this in your command line:\n",
+    "**Data**:  \n",
+    "- Microsoft Building Footprints\n",
+    "- LiDAR-derived rasters\n",
     "\n",
-    "`pip install rasterio geopandas numpy matplotlib scipy`\n",
+    "**Workflow**:  \n",
+    "- Create HIZ boundaries around each building footprint\n",
+    "- Count number of homes within each HIZ\n",
+    "- Get zonal summary values of each raster for each HIZ\n",
     "\n",
-    "Read in the libraries and use `rasterio` to open the tif file."
+    "## Step 1: Create HIZ Boundaries around each Structure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "53841908-5925-4775-99ea-c55c5a8df894",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rasterio as rio\n",
     "import geopandas as gpd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "hmax = rio.open('Data/example_raster_hmax.tif')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "113479c2-c10e-45c4-8fa0-adc344105382",
-   "metadata": {},
-   "source": [
-    "It's important to know that `rio` opens files in read mode, and that mode must be changed to manipulate the raster."
+    "# Import building footprints\n",
+    "file_path = 'E:\\_PROJECTS\\Ouray_ParcelRisk\\data\\MicrosoftBuildingFootprints_Ouray\\Ouray_County_Buildings.shp'\n",
+    "footprints = gpd.read_file(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "997c01c3-9a1f-45ed-b610-7feba37d730e",
    "metadata": {
     "tags": []
@@ -50,21 +46,85 @@
     {
      "data": {
       "text/plain": [
-       "'r'"
+       "'e:\\\\_PROJECTS\\\\Ouray_ParcelRisk\\\\ouray\\\\workflows'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hmax.mode"
+    "from utils.HIZ import get_hiz\n",
+    "\n",
+    "# Create defensible space zones around all building footprints\n",
+    "hiz = get_hiz(footprints)\n",
+    "hiz.head() # Preview data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbd62c1f",
+   "metadata": {},
+   "source": [
+    "Now that we have created the HIZ boundaries around each building footprints, we need to save each one as its own geopackage for analysis. This could also be a shapefile, but a geopackage is more modern and generally preferred in 2025, so we'll stick with that.\n",
+    "\n",
+    "Because of the difference in alignment between buildings in the LiDAR data and the outlines provided by Microsoft Building Footprints, we're actually going to use this first buffer as an analog for the building itself. This will help avoid incuding the building pixels from the raster in the analysis.\n",
+    "\n",
+    "Below, we save each geometry column as its own geopackage, then we will restart the kernel to save memory and re-import the individual files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "be89ebb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save each as its own geopackage\n",
+    "\n",
+    "# In order to save a shapefile of HIZs, each geometry column needs to be saved as a separate shapefile\n",
+    "# Make sure each file contains one geometry column, and also 'FID' and \"County'.\n",
+    "geom_cols = ['geometry', 'buffer_z1', 'buffer_z2', 'buffer_z3']\n",
+    "non_geom_cols = ['FID', 'County']\n",
+    "\n",
+    "# Iterate and save each as a separate Shapefile\n",
+    "for geom_col in geom_cols:\n",
+    "    # Create a temporary GeoDataFrame with only the current geometry column and non-geometry columns\n",
+    "    temp_gdf = hiz[non_geom_cols + [geom_col]].copy()\n",
+    "    temp_gdf.set_geometry(geom_col, inplace=True)  # Loop through columns, setting each as the geometry column\n",
+    "    \n",
+    "    # Save to Shapefile\n",
+    "    temp_gdf.to_file(f'Data/hiz_{geom_col}.gpkg') # Edit filepath as needed to save to your working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2917963e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "z1 = gpd.read_file(\"Data/hiz_buffer_z1.gpkg\")\n",
+    "z2 = gpd.read_file(\"Data/hiz_buffer_z2.gpkg\")\n",
+    "z3 = gpd.read_file(\"Data/hiz_buffer_z3.gpkg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11f1c559",
+   "metadata": {},
+   "source": [
+    "## Step 2: Count the Number of Adjacent Structures\n",
+    "\n",
+    "In order to obtain a proxy for structure density, we are going to count the number of adjacent structures in the vicinity of each home. We will append these counts to the geopackages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7ff055bd-76ea-44c8-896b-98538cefe3c3",
    "metadata": {},
    "outputs": [
@@ -90,7 +150,8 @@
     }
    ],
    "source": [
-    "plt.imshow(hmax.read(1))"
+    "from utils.HIZ import structures_per_zone\n",
+    "\n"
    ]
   },
   {
@@ -713,7 +774,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
