import rasters and dynamic path mgmt

--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Author: **Bryce A Young** | \n",
     "Created: **2024-12-05** | \n",
-    "Modified: **2024-12-06**\n",
+    "Modified: **2024-12-17**\n",
     "\n",
     "In this notebook, we analyze fuel distributions within the defensible space of every building in Ouray County.\n",
     "\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1f366a42",
    "metadata": {},
    "outputs": [],
@@ -40,22 +40,24 @@
     "import os\n",
     "### Directory ###\n",
     "# Repository root\n",
-    "root = r'E:/_PROJECTS/Ouray_ParcelRisk/ouray'\n",
+    "root = 'E:/_PROJECTS/Ouray_ParcelRisk/ouray'\n",
     "\n",
     "### Data paths ###\n",
     "# Folder where all the data inputs and outputs will live\n",
-    "data = r'E:/_PROJECTS/Ouray_ParcelRisk/data'\n",
+    "data = 'E:/_PROJECTS/Ouray_ParcelRisk/data'\n",
     "# Folder for all SILVIS WUI files\n",
     "silvis_wui = os.path.join(data, 'silvis_wui')\n",
     "# Folder for microsoft building footprints\n",
-    "mbf = os.path.join(data, 'MicrosoftBuildingFootprints_Ouray')\n",
+    "mbf = os.path.join(data, 'building_footprints')\n",
     "# Folder containing LiDAR-derived rasters\n",
-    "tiffs_from_las = os.path.join(data, 'tiffs_from_las')"
+    "tiffs_from_las = os.path.join(data, 'tiffs_from_las')\n",
+    "# Folder countaining the Ouray County boundary\n",
+    "county_boundary = os.path.join(data, 'county_boundary')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a05a1593",
    "metadata": {},
    "outputs": [
@@ -65,7 +67,7 @@
        "'E:\\\\_PROJECTS\\\\Ouray_ParcelRisk\\\\ouray'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,16 +360,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5ac547b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Projected CRS: PROJCS[\"NAD83_Conus_Albers\",GEOGCS[\"GCS_NAD83\",DAT ...>\n",
+       "Name: NAD83_Conus_Albers\n",
+       "Axis Info [cartesian]:\n",
+       "- [east]: Easting (metre)\n",
+       "- [north]: Northing (metre)\n",
+       "Area of Use:\n",
+       "- undefined\n",
+       "Coordinate Operation:\n",
+       "- name: unnamed\n",
+       "- method: Albers Equal Area\n",
+       "Datum: North American Datum 1983\n",
+       "- Ellipsoid: GRS 1980\n",
+       "- Prime Meridian: Greenwich"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import county shapefile\n",
     "import geopandas as gpd\n",
     "\n",
-    "county_shp = gpd.read_file('file/path/gdf.shp')\n",
-    "county_shp.crs() # Check CRS"
+    "county_shp = gpd.read_file(os.path.join(county_boundary, 'Ouray_County_Boundary.shp'))\n",
+    "county_shp.crs # Check CRS"
    ]
   },
   {
@@ -375,7 +400,9 @@
    "id": "c036fdd9",
    "metadata": {},
    "source": [
-    "We need to rasterize the county shapefile into a binary raster where 1 = values inside the county and 0 = values outside the county."
+    "We need to rasterize the county shapefile into a binary raster where 1 = values inside the county and 0 = values outside the county.\n",
+    "\n",
+    "Make a raster at 10m for silvis wui and a raster at 1m for the lidar rasters."
    ]
   },
   {
@@ -401,7 +428,7 @@
    "source": [
     "### Clip WUI rasters to county boundary\n",
     "\n",
-    "Now we're going to clip the WUI rasters to the county boundary, setting values to nodata where county_boundary_raster == 0."
+    "Now we're going to clip the WUI rasters to the county boundary, setting values to nodata where county_boundary_raster == 0. The county boundary will be the snap raster and the source of truth for raster extent."
    ]
   },
   {
@@ -412,7 +439,57 @@
    "outputs": [],
    "source": [
     "# Reproject WUI rasters to same CRS as county boundary\n",
-    "# NOTE: make sure it's also the same CRS as the homes\n"
+    "# NOTE: make sure it's also the same CRS as the homes\n",
+    "import rasterio\n",
+    "from rasterio.mask import mask\n",
+    "from rasterio.warp import transform_geom\n",
+    "import geopandas as gpd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Paths to your files\n",
+    "raster_path = 'path/to/your/raster.tif'\n",
+    "vector_path = 'path/to/your/vector_boundary.shp'\n",
+    "output_path = 'path/to/output/clipped_raster.tif'\n",
+    "\n",
+    "# Set desired nodata value\n",
+    "nodata_value = 255\n",
+    "\n",
+    "# Step 1: Read vector boundary and reproject to raster CRS\n",
+    "vector = gpd.read_file(vector_path)\n",
+    "\n",
+    "# Open the raster to get its CRS\n",
+    "with rasterio.open(raster_path) as src:\n",
+    "    raster_crs = src.crs\n",
+    "\n",
+    "# Reproject vector boundary to match raster CRS\n",
+    "vector_reprojected = vector.to_crs(raster_crs)\n",
+    "\n",
+    "# Step 2: Clip the raster using the reprojected vector geometry\n",
+    "geometries = [geom.__geo_interface__ for geom in vector_reprojected.geometry]\n",
+    "\n",
+    "# Open raster and clip\n",
+    "with rasterio.open(raster_path) as src:\n",
+    "    # Perform the clipping\n",
+    "    clipped_raster, clipped_transform = mask(src, geometries, crop=True, nodata=nodata_value)\n",
+    "    \n",
+    "    # Update the metadata\n",
+    "    clipped_meta = src.meta.copy()\n",
+    "    clipped_meta.update({\n",
+    "        \"driver\": \"GTiff\",\n",
+    "        \"height\": clipped_raster.shape[1],\n",
+    "        \"width\": clipped_raster.shape[2],\n",
+    "        \"transform\": clipped_transform,\n",
+    "        \"nodata\": nodata_value\n",
+    "    })\n",
+    "\n",
+    "# Step 3: Replace values outside the mask (optional but ensures consistency)\n",
+    "clipped_raster = np.where(clipped_raster == nodata_value, nodata_value, clipped_raster)\n",
+    "\n",
+    "# Step 4: Save the clipped raster\n",
+    "with rasterio.open(output_path, 'w', **clipped_meta) as dst:\n",
+    "    dst.write(clipped_raster)\n",
+    "\n",
+    "print(f\"Clipped raster saved to: {output_path}\")\n"
    ]
   },
   {
@@ -496,25 +573,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "60957165",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0-2m:  {'driver': 'GTiff', 'dtype': 'float32', 'nodata': nan, 'width': 42881, 'height': 47000, 'count': 1, 'crs': CRS.from_wkt('LOCAL_CS[\"NAD83(2011) / UTM zone 13N\",UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(1.0, 0.0, 236950.0,\n",
+      "       0.0, -1.0, 4247000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n",
+      "2-4m:  {'driver': 'GTiff', 'dtype': 'float32', 'nodata': nan, 'width': 42881, 'height': 47000, 'count': 1, 'crs': CRS.from_wkt('LOCAL_CS[\"NAD83(2011) / UTM zone 13N\",UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(1.0, 0.0, 236950.0,\n",
+      "       0.0, -1.0, 4247000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n",
+      "4-8m:  {'driver': 'GTiff', 'dtype': 'float32', 'nodata': nan, 'width': 42881, 'height': 47000, 'count': 1, 'crs': CRS.from_wkt('LOCAL_CS[\"NAD83(2011) / UTM zone 13N\",UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(1.0, 0.0, 236950.0,\n",
+      "       0.0, -1.0, 4247000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n",
+      "8+m:  {'driver': 'GTiff', 'dtype': 'float32', 'nodata': nan, 'width': 42881, 'height': 47000, 'count': 1, 'crs': CRS.from_wkt('LOCAL_CS[\"NAD83(2011) / UTM zone 13N\",UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(1.0, 0.0, 236950.0,\n",
+      "       0.0, -1.0, 4247000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n",
+      "chm:  {'driver': 'GTiff', 'dtype': 'float32', 'nodata': nan, 'width': 42881, 'height': 47000, 'count': 1, 'crs': CRS.from_wkt('LOCAL_CS[\"NAD83(2011) / UTM zone 13N\",UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(1.0, 0.0, 236950.0,\n",
+      "       0.0, -1.0, 4247000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n",
+      "ladder:  {'driver': 'GTiff', 'dtype': 'float32', 'nodata': nan, 'width': 42881, 'height': 47000, 'count': 1, 'crs': CRS.from_wkt('LOCAL_CS[\"NAD83(2011) / UTM zone 13N\",UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(1.0, 0.0, 236950.0,\n",
+      "       0.0, -1.0, 4247000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n",
+      "density:  {'driver': 'GTiff', 'dtype': 'float32', 'nodata': -3.3999999521443642e+38, 'width': 42881, 'height': 47000, 'count': 1, 'crs': CRS.from_wkt('LOCAL_CS[\"NAD83(2011) / UTM zone 13N + NAVD88 height - US Geoid Model of 2018\",UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(1.0, 0.0, 236950.0,\n",
+      "       0.0, -1.0, 4247000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n",
+      "zentropy:  {'driver': 'GTiff', 'dtype': 'float32', 'nodata': nan, 'width': 42881, 'height': 47000, 'count': 1, 'crs': CRS.from_wkt('LOCAL_CS[\"NAD83(2011) / UTM zone 13N\",UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'), 'transform': Affine(1.0, 0.0, 236950.0,\n",
+      "       0.0, -1.0, 4247000.0), 'blockysize': 1, 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Import data\n",
     "import rasterio as rio\n",
     "import numpy as np\n",
     "from utils.raster import read_raster\n",
     "\n",
-    "cc0_2, cc0_2_profile = read_raster('file/path/raster.tif', layer=1, profile=True)\n",
-    "cc2_4, cc2_4_profile = read_raster('file/path/raster.tif', layer=1, profile=True)\n",
-    "cc4_8, cc4_8_profile = read_raster('file/path/raster.tif', layer=1, profile=True)\n",
-    "cc_8, cc_8_profile = read_raster('file/path/raster.tif', layer=1, profile=True)\n",
+    "# Setup environment\n",
+    "# ----\n",
+    "# Path to all las-derived rasters\n",
+    "tiffs_from_las = r\"E:/_PROJECTS/Ouray_ParcelRisk/data/tiffs_from_las\"\n",
+    "# County, municipality etc. where the rasters cover\n",
+    "aoi = 'ouray'\n",
+    "# ----\n",
     "\n",
+    "# Initiate list to store objects\n",
+    "lidar_rasters = []\n",
+    "lidar_raster_profiles = []\n",
+    "\n",
+    "# Canopy cover 0-2m\n",
+    "cc0_2, cc0_2_profile = read_raster(os.path.join(tiffs_from_las, '{0}_cc0_2m.tif'.format(aoi)), layer=1, profile=True)\n",
+    "lidar_rasters.append(cc0_2)\n",
+    "lidar_raster_profiles.append(cc0_2_profile)\n",
+    "\n",
+    "# Canopy cover 2-4m\n",
+    "cc2_4, cc2_4_profile = read_raster(os.path.join(tiffs_from_las, '{0}_cc2_4m.tif'.format(aoi)), layer=1, profile=True)\n",
+    "lidar_rasters.append(cc2_4)\n",
+    "lidar_raster_profiles.append(cc2_4_profile)\n",
+    "\n",
+    "# Canopy cover 4-8m\n",
+    "cc4_8, cc4_8_profile = read_raster(os.path.join(tiffs_from_las, '{0}_cc4_8m.tif'.format(aoi)), layer=1, profile=True)\n",
+    "lidar_rasters.append(cc4_8)\n",
+    "lidar_raster_profiles.append(cc4_8_profile)\n",
+    "\n",
+    "# Canopy cover 8-40m\n",
+    "cc8_40, cc8_40_profile = read_raster(os.path.join(tiffs_from_las, '{0}_cc8_40m.tif'.format(aoi)), layer=1, profile=True)\n",
+    "lidar_rasters.append(cc8_40)\n",
+    "lidar_raster_profiles.append(cc8_40_profile)\n",
+    "\n",
+    "# Canopy height model\n",
+    "chm, chm_profile = read_raster(os.path.join(tiffs_from_las, '{0}_chm.tif'.format(aoi)), layer=1, profile=True)\n",
+    "lidar_rasters.append(chm)\n",
+    "lidar_raster_profiles.append(chm_profile)\n",
+    "\n",
+    "# Ladder fuels\n",
+    "ladder, ladder_profile = read_raster(os.path.join(tiffs_from_las, '{0}_ladderfuels.tif'.format(aoi)), layer=1, profile=True)\n",
+    "lidar_rasters.append(ladder)\n",
+    "lidar_raster_profiles.append(ladder_profile)\n",
+    "\n",
+    "# Point density\n",
+    "density, density_profile = read_raster(os.path.join(tiffs_from_las, '{0}_pointDensity.tif'.format(aoi)), layer=1, profile=True)\n",
+    "lidar_rasters.append(density)\n",
+    "lidar_raster_profiles.append(density_profile)\n",
+    "\n",
+    "# Z-Entropy\n",
+    "zentropy, zentropy_profile = read_raster(os.path.join(tiffs_from_las, '{0}_zentropy.tif'.format(aoi)), layer=1, profile=True)\n",
+    "lidar_rasters.append(zentropy)\n",
+    "lidar_raster_profiles.append(zentropy_profile)\n",
+    "\n",
+    "# Print metadata for quality inspection\n",
     "print('0-2m: ', cc0_2_profile)\n",
     "print('2-4m: ', cc2_4_profile)\n",
     "print('4-8m: ', cc4_8_profile)\n",
-    "print('8+m: ', cc_8_profile)"
+    "print('8+m: ', cc8_40_profile)\n",
+    "print('chm: ', chm_profile)\n",
+    "print('ladder: ', ladder_profile)\n",
+    "print('density: ', density_profile)\n",
+    "print('zentropy: ', zentropy_profile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f99d791",
+   "metadata": {},
+   "source": [
+    "The metadata of these rasters needs updating. For instance, we can change the dtype on many of these rasters to save space and processing speed. To do that, we will have to solve for the nodata value as nan, since that requires a float dtype. Ladder fuels are a binary raster. NOTE: put this section in raster_prep.ipynb!"
    ]
   },
   {
