minor changes to notes and organization

--- a/workflows/hiz/ouray_hiz.ipynb
+++ b/workflows/hiz/ouray_hiz.ipynb
@@ -271,7 +271,7 @@
    "id": "9a91e55c",
    "metadata": {},
    "source": [
-    "### Mosaic WUI rasters\n",
+    "### Mosaic WUI rasters - put this section in raster_prep.ipynb!\n",
     "\n",
     "Let's put the WUI rasters together into a single raster. \n",
     "\n",
@@ -353,7 +353,7 @@
    "id": "b72dc3a6",
    "metadata": {},
    "source": [
-    "#### Create rasterized county boundary\n",
+    "#### Create rasterized county boundary - put this section in raster_prep.ipynb\n",
     "\n",
     "Now we want to clip these rasters to the extent of the county boundary, matching the shape and the CRS."
    ]
@@ -426,7 +426,7 @@
    "id": "22f3a641",
    "metadata": {},
    "source": [
-    "### Clip WUI rasters to county boundary\n",
+    "### Clip WUI rasters to Analysis Area (county boundary) - put this section in raster_prep.ipynb\n",
     "\n",
     "Now we're going to clip the WUI rasters to the county boundary, setting values to nodata where county_boundary_raster == 0. The county boundary will be the snap raster and the source of truth for raster extent."
    ]
@@ -674,7 +674,9 @@
    "id": "9f99d791",
    "metadata": {},
    "source": [
-    "The metadata of these rasters needs updating. For instance, we can change the dtype on many of these rasters to save space and processing speed. To do that, we will have to solve for the nodata value as nan, since that requires a float dtype. Ladder fuels are a binary raster. NOTE: put this section in raster_prep.ipynb!"
+    "### put this section in raster_prep.ipynb!\n",
+    "\n",
+    "The metadata of these rasters needs updating. For instance, we can change the dtype on many of these rasters to save space and processing speed. To do that, we will have to solve for the nodata value as nan, since that requires a float dtype. Ladder fuels are a binary raster."
    ]
   },
   {
@@ -733,7 +735,7 @@
    "source": [
     "Creating a window required a few steps. First, defining what the window does. I call this function `fill_nan`. I use `generic_filter` from the `scipy` library, which does this automatically, providing three arguments: the **array** to filter, the **function** of the window, and the **size** of the window. Optionally, we can set **mode** based on how we want to treat pixels outside of the array. Let's stick with the default *reflect*. You can read more about options here: [https://docs.scipy.org/doc/scipy/reference/generated/scipy.ndimage.generic_filter.html]\n",
     "\n",
-    "### Fill in missing values\n",
+    "### Fill in missing values - put this section in raster_prep.ipynb\n",
     "\n",
     "#### Canopy Cover 0-2m\n",
     "\n",
